mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- 
  Copyright 2016 Kevin Flood
+ Adding changes before rebasing commit
 -->
 <head>
 	<title>A Very Respectful Website</title>
