--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
  Some silly changes from master branch
 -->
 <head>
-	<title>Silly Changes on Master</title>
+	<title>Lots of Trouble Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,14 +16,13 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler Content -->
+	<!-- Content Goes Here -->
 		<p>
-			Just stuff for now,
-			Not sure if we should replace this or not
+			Some interesting stuff goes here.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Flip Flap 2016</p>
+		<p>&copy; Kevin Flood 2016</p>
 	</footer>
 </body>
 </html>
