Local: updating simple.html copyright notice.

--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Kevin Flood 2016</p>
+		<p>&copy; Kevin Flood 2016. Fred</p>
 	</footer>
 </body>
 </html>
